bugfix page jump button

--- a/src/styles/components/page.less
+++ b/src/styles/components/page.less
@@ -322,7 +322,9 @@
     }
 
     &-prev,
-    &-next {
+    &-next,
+    &-item-jump-prev,
+    &-item-jump-next {
         background-color: @btn-ghost-bg-dark;
 
         a {
